Contaboo/Assistant Cluster 2of2/whoami/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: traefik-whoami
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dev-k8s.example.com`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: traefik-whoami
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dev-k8s.example.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  # tls:
  #   {}
